--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,8 @@
 [defaults]
-library = ./library/ansible-aur
+library = ./library
+inventory=./inventory
+sudo_flags=-H -S
+
+[ssh_connection]
+#ssh_args=-o ForwardAgent=yes
+pipelining = True
