--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -3,21 +3,15 @@
   file:
     src: /usr/share/zoneinfo/{{ timezone }}
     dest: /etc/localtime
-    state: linke
-
-- name: Copy pacman configuration file
-  copy:
-    src: pacman.conf
-    dest: /etc/pacman.conf
-    backup: true
+    state: link
 
 - name: Set up hwclock
   command:
     cmd: hwclock --systohc
-    creates: /etc/adjtime
 
 - name: Set up /etc/locale.gen
   lineinfile:
+    path: /etc/locale.gen
     regex: "{{ locale }}"
     line: "{{ locale }}"
   register: locale
@@ -26,14 +20,26 @@
   command: locale-gen
   when: locale.changed
 
-- name: Refresh pacman mirrors
-  pacman:
-    update_cache: yes
-
 - name: Set the hostname
-  hostname:
-    name: "{{ hostname }}"
+  copy:
+    dest: /etc/hostname
+    content: "{{ hostname }}"
   when: hostname is defined
+
+- name: Configure /etc/hosts
+  blockinfile:
+    marker: "# {mark} ANSIBLE CONFIG hosts"
+    dest: /etc/hosts
+    block: |
+      127.0.0.1	localhost{% if hostname is defined %} {{ hostname }}{% endif %}
+
+      # The following lines are desirable for IPv6 capable hosts
+      ::1     ip6-localhost ip6-loopback
+      fe00::0 ip6-localnet
+      ff00::0 ip6-mcastprefix
+      ff02::1 ip6-allnodes
+      ff02::2 ip6-allrouters
+
 
 - name: Set kernel parameters
   lineinfile:
@@ -43,12 +49,11 @@
     line: 'GRUB_CMDLINE_LINUX_DEFAULT="{{ kernel_parameters }}"'
   when: kernel_parameters is defined and bootloader == 'grub'
   notify:
-    - rebuild grub
+    - rebuild boot
   tags:
     - kernelparams
 
 - include: shell.yml
-- include: user.yml
 - include: sudo.yml
 - include: packages.yml
 - include: journal.yml
